--- a/Js/Document Object Model/CSSmanipulation.html
+++ b/Js/Document Object Model/CSSmanipulation.html
@@ -6,7 +6,7 @@
     <title>Manipulando CSS</title>
 </head>
 <body>
-    <h1 id="title">Manipulando CSS</h1>
+    <h1 id="title">Manipulando Style</h1>
 
     <button id="btn-change">Altera cor</button>
 
