--- a/Js/Document Object Model/CSSmanipulation2.html
+++ b/Js/Document Object Model/CSSmanipulation2.html
@@ -22,7 +22,7 @@
 
         buttonEl.addEventListener("click", () => {
 
-            if(titleEl.classList.contais("test")){
+            if(titleEl.classList.contains("test")){
                 titleEl.classList.remove("test")
             } else {
                 titleEl.classList.add("test")
